cmake_minimum_required(VERSION 3.10)
project(android_clion)

set(CMAKE_CXX_STANDARD 11)

include_directories(bionic/libc)
include_directories(bionic/libc/kernel/uapi)
include_directories(bionic/libc/include)
include_directories(bionic/libc/arch-arm/include)
include_directories(bionic/libstdc++/include)
include_directories(bionic/libc/upstream-netbsd/libc/include)
include_directories(bionic/libthread_db/include)
include_directories(bionic/libm/include)

include_directories(external/libcxx/include)
include_directories(external/libpcap)

include_directories(frameworks/native/include)
include_directories(frameworks/base/include/)
include_directories(frameworks/av/include/)
include_directories(frameworks/av/services/audioflinger/)
include_directories(frameworks/av/services/audiopolicy/)
include_directories(frameworks/av/services/audiopolicy/common/managerdefinitions/include/)
include_directories(frameworks/av/services/audiopolicy/common/include/)
include_directories(frameworks/av/services/audiopolicy/enginedefault/include/)
include_directories(frameworks/av/services/audiopolicy/engine/interface/)
include_directories(frameworks/av/services/audiopolicy/engineconfigurable/interface/)
include_directories(frameworks/av/services/audiopolicy/engineconfigurable/include/)
include_directories(frameworks/av/services/audiopolicy/service/)
include_directories(frameworks/av/services/oboeservice/)
include_directories(frameworks/av/services/medialog/)
include_directories(frameworks/av/services/soundtrigger/)
include_directories(frameworks/av/media/libaaudio/src/)
include_directories(frameworks/av/media/libaaudio/include/)
include_directories(frameworks/av/media/utils/include/)

include_directories(system/core/include)
include_directories(system/core/libmemunreachable/include/)
include_directories(system/media/audio/include)
include_directories(system/media/audio_utils/include/)
include_directories(system/libhwbinder/include/)
include_directories(system/core/base/include/)
include_directories(system/core/libkeyutils/include/)

include_directories(hardware/libhardware/include)
include_directories(hardware/libhardware_legacy/include/)

add_definitions(-D__ANDROID__ -DUSE_XML_AUDIO_POLICY_CONF)

file(GLOB_RECURSE BIONIC_SOURCES "bionic/*.cpp" "bionic/*.c" "bionic/*.cxx" "bionic/*.h")
file(GLOB_RECURSE HARDWARE_SOURCES "hardware/*.cpp" "hardware/*.c" "hardware/*.cxx" "hardware/*.h")
file(GLOB_RECURSE FRAMEWORK_SOURCES "frameworks/*.cpp" "frameworks/*.c" "frameworks/*.cxx" "frameworks/*.h")
file(GLOB_RECURSE SYSTEM_SOURCES "system/*.cpp" "system/*.c" "system/*.cxx" "system/*.h")
file(GLOB_RECURSE LIBCORE_SOURCES "libcore/*.cpp" "libcore/*.c" "libcore/*.cxx" "libcore/*.cc" "libcore/*.h")
file(GLOB_RECURSE DEVICE_SOURCES "device/*.cpp" "device/*.c" "device/*.cxx" "device/*.cc" "device/*.h")
file(GLOB_RECURSE MYCODE_SOURCES "mycode/*.cpp" "mycode/*.c" "mycode/*.cxx" "mycode/*.cc" "mycode/*.h")

add_executable(android_c ${BIONIC_SOURCES} ${LIBCORE_SOURCES} ${HARDWARE_SOURCES} ${FRAMEWORK_SOURCES} ${SYSTEM_SOURCES} ${DEVICE_SOURCES} ${MYCODE_SOURCES})